--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -28,3 +28,15 @@
 body{
     background-color: var(--ui-primary);
 }
+
+@layer utilities {
+    .ring {
+        --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+    }
+
+    .focus-visible\:ring-2 {
+        &:focus-visible {
+            --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor)
+        }
+    }
+}
